took out all background pictures. re styled some css. fixed about me. added target to all links

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
             </header>
             <nav role="navigation">
                 <div class="nav-links-wrapper">
-                    <span><a href="index.html">Home</a></span>
-                    <span><a href="project.html">Projects</a></span>
-                    <span><a href="contact.html">Contact</a></span>
+                    <span><a href="index.html"  target="_blank">Home</a></span>
+                    <span><a href="project.html" target="_blank">Projects</a></span>
+                    <span><a href="contact.html" target="_blank">Contact</a></span>
                 </div>
             </nav>
         </div>
@@ -32,10 +32,10 @@
     <main>
         <section>
             <div class="contact-wrapper">
-                <h2 class="links">Email: <a href="zapien120@gmail.com">zapien120@gmail</a></h2>
-                <h2 class="links">Github: <a href="https://github.com/Javierz299">/Javierz299</a> </h2>
+                <h2 class="links">Email: <a href="mailto: zapien120@gmail.com">zapien120@gmail</a></h2>
+                <h2 class="links">Github: <a href="https://github.com/Javierz299" target="_blank">/Javierz299</a> </h2>
                 <h2 class="links">Linkdin: <a
-                        href="https://www.linkedin.com/in/javier-zapien-66bb77188/">https://www.linkedin.com/</a></h2>
+                        href="https://www.linkedin.com/in/javier-zapien-66bb77188/" target="_blank">Javier Zapien</a></h2>
             </div>
         </section>
 
