--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Portfolio</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <title>Javier Zapien</title>
 </head>
 
 <body>
@@ -20,9 +22,9 @@
         </header>
         <nav role="navigation">
             <div class="nav-links-wrapper">
-                <span><a href="index.html">Home</a></span>
-                <span><a href="project.html">Projects</a></span>
-                <span><a href="contact.html">Contact</a></span>
+                <span><a href="index.html" target="_blank">Home</a></span>
+                <span><a href="project.html" target="_blank">Projects</a></span>
+                <span><a href="contact.html" target="_blank">Contact</a></span>
             </div>
         </nav>
     </div>
@@ -33,29 +35,26 @@
                     <h3 class="about-me tdsl">ABOUT ME</h3>
                     <p class="about-me-para"> I worked in the Steel Industry for six years before pursuing a career in
                         Full Stack Web Development.
-                        Hard Work and long hours is no stranger to me. Recently graduated from thinkful's Engineering
-                        Immersion program.
-                        Spending 60+ hours a week of devotation to building my skills and knowledge. I continue to develop my
-                        skills and demonstrate my passion for the web.</p>
-                    <p><span class="tdsl">Perosonal:</span> I am a competitive Obstacle Course Racer. Competing in races
-                        such as Spartan Race, Savage Race and Tough Mudder. Also a big fan of, Zoolander, Dumb and
+                        Hard Work and long hours are no strangers to me. I recently graduated from thinkful's Engineering Immersion program, where I spent 60+ hours a week devoted to building my skills and knowledge. I continue to develop my skills and demonstrate my passion for the web. I am looking forward to contributing my skills to your team.</p>
+                    <p><span class="tdsl">Perosonal:</span> I am a competitive Obstacle Course Racer. I have competed in races
+                        such as Spartan Race, Savage Race and Tough Mudder. I am also a big fan of, Zoolander, Dumb and
                         Dumber, The Office and GoT.</p>
                 </section>
             </div>
             <div class="box-2">
                 <section class="nested-box-2">
                     <div class="project-img1">
-                        <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
+                        <img src="./imgs/bookmark.png" alt="bookmark app">
                     </div>
                     <div class="project-description">
                         <p><span class="tdsl">Title:</span> Bookmark This</p>
                         <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites
                             that you wish to
                             reference.</p>
-                        <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
+                        <p><span class="tdsl">Stack:</span> HTML, CSS, JQuery and Webpack</p>
                         <p><span class="tdsl">Links:</span> <span><a
-                                    href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
-                            <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live
+                                    href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app" target="_blank">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/" target="_blank">Live
                                     App</a></span>
                         </p>
                     </div>
@@ -64,17 +63,17 @@
             <div class="box-3">
                 <section class="nested-box-3">
                     <div class="project-img2">
-                        <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
+                        <img src="./imgs/quiz.png" alt="quiz app">
                     </div>
                     <div class="project-description">
                         <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
                         <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge
                             of the Harry Potter movies.
                         </p>
-                        <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
+                        <p><span class="tdsl">Stack:</span> HTML, CSS, JQuery </p>
                         <p><span class="tdsl">Links:</span> <span><a
-                                    href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
-                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live
+                                    href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app" target="_blank">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/" target="_blank">Live
                                     App</a></span>
                         </p>
                     </div>
@@ -106,7 +105,7 @@
             </div>
         </div>
     </main>
-    <footer role="content-info">&copy; 2019</footer>
+    <footer>&copy; 2019</footer>
 </body>
 
 </html>
