--- a/project.html
+++ b/project.html
@@ -22,9 +22,9 @@
             </header>
             <nav role="navigation">
                 <div class="nav-links-wrapper">
-                    <span><a href="index.html">Home</a></span>
-                    <span><a href="project.html">Projects</a></span>
-                    <span><a href="contact.html">Contact</a></span>
+                    <span><a href="index.html" target="_blank">Home</a></span>
+                    <span><a href="project.html" target="_blank">Projects</a></span>
+                    <span><a href="contact.html" target="_blank">Contact</a></span>
                 </div>
             </nav>
         </div>
@@ -46,8 +46,8 @@
                             reference.</p>
                         <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
                         <p><span class="tdsl">Links:</span> <span><a
-                                    href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app">Github</a></span>
-                            <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/">Live
+                                    href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app" target="_blank">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/" target="_blank">Live
                                     App</a></span>
                         </p>
                     </div>
@@ -66,8 +66,8 @@
                         </p>
                         <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
                         <p><span class="tdsl">Links:</span> <span><a
-                                    href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app">Github</a></span>
-                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/">Live
+                                    href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app" target="_blank">Github</a></span>
+                            <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/" target="_blank">Live
                                     App</a></span>
                         </p>
                     </div>
