minor changes. mobile first

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
             </header>
             <nav role="navigation">
                 <div class="nav-links-wrapper">
-                    <span><a href="index.html"  target="_blank">Home</a></span>
-                    <span><a href="project.html" target="_blank">Projects</a></span>
-                    <span><a href="contact.html" target="_blank">Contact</a></span>
+                    <span><a href="index.html" >Home</a></span>
+                    <span><a href="project.html" >Projects</a></span>
+                    <span><a href="contact.html" >Contact</a></span>
                 </div>
             </nav>
         </div>
