--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </header>
         <nav role="navigation">
             <div class="nav-links-wrapper">
-                <span><a href="index.html" target="_blank">Home</a></span>
-                <span><a href="project.html" target="_blank">Projects</a></span>
-                <span><a href="contact.html" target="_blank">Contact</a></span>
+                <span><a href="index.html" >Home</a></span>
+                <span><a href="project.html" >Projects</a></span>
+                <span><a href="contact.html" >Contact</a></span>
             </div>
         </nav>
     </div>
@@ -35,9 +35,9 @@
                     <h3 class="about-me tdsl">ABOUT ME</h3>
                     <p class="about-me-para"> I worked in the Steel Industry for six years before pursuing a career in
                         Full Stack Web Development.
-                        Hard Work and long hours are no strangers to me. I recently graduated from thinkful's Engineering Immersion program, where I spent 60+ hours a week devoted to building my skills and knowledge. I continue to develop my skills and demonstrate my passion for the web. I am looking forward to contributing my skills to your team.</p>
+                        Hard work and long hours are no strangers to me. I recently graduated from thinkful's Engineering Immersion program, where I spent 60+ hours a week devoted to building my skills and knowledge. I continue to develop my skills and demonstrate my passion for the web. I am looking forward to contributing my skills to your team.</p>
                     <p><span class="tdsl">Perosonal:</span> I am a competitive Obstacle Course Racer. I have competed in races
-                        such as Spartan Race, Savage Race and Tough Mudder. I am also a big fan of, Zoolander, Dumb and
+                        such as Spartan Race, Savage Race and Tough Mudder. I am also a big fan of Zoolander, Dumb and
                         Dumber, The Office and GoT.</p>
                 </section>
             </div>
