took out bookmark project and replaced it with one more app

--- a/index.html
+++ b/index.html
@@ -44,17 +44,15 @@
             <div class="box-2">
                 <section class="nested-box-2">
                     <div class="project-img1">
-                        <img src="./imgs/bookmark.png" alt="bookmark app">
+                        <img src="./imgs/workout-list.png" alt="workout app">
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> Bookmark This</p>
-                        <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites
-                            that you wish to
-                            reference.</p>
-                        <p><span class="tdsl">Stack:</span> HTML, CSS, JQuery and Webpack</p>
+                        <p><span class="tdsl">Title:</span> One More</p>
+                        <p><span class="tdsl">Description:</span> A fitness app that allows you to add,save, modify and delete personalized workouts.</p>
+                        <p><span class="tdsl">Stack:</span> React, Node.js, PostgreSQL</p>
                         <p><span class="tdsl">Links:</span> <span><a
-                                    href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app" target="_blank">Github</a></span>
-                            <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/" target="_blank">Live
+                                    href="https://github.com/thinkful-ei-iguana/javi-one-more-client" target="_blank">Github</a></span>
+                            <span><a href="https://one-more-app-aiexsay42.now.sh/workoutPage" target="_blank">Live
                                     App</a></span>
                         </p>
                     </div>
