add third project to portfolio. frenmo

--- a/index.html
+++ b/index.html
@@ -77,9 +77,27 @@
                     </div>
                 </section>
             </div>
-
             <div class="box-4">
                 <section class="nested-box-4">
+                    <div class="project-img2">
+                        <img src="./imgs/frenmo.png.png" alt="quiz app">
+                    </div>
+                    <div class="project-description">
+                        <p><span class="tdsl">Title:</span> Frenmo</p>
+                        <p><span class="tdsl">Description:</span> A venmo like application, that allows the exchange of favors instead of money.
+                        </p>
+                        <p><span class="tdsl">Stack:</span> React, Node.js, Express.js, PostgreSQL </p>
+                        <p><span class="tdsl">Links:</span> <span><a
+                                    href="https://github.com/MrNanosh/frienmo-client" target="_blank">Github</a></span>
+                            <span><a href="https://https://frenmo.now.sh/" target="_blank">Live
+                                    App</a></span>
+                        </p>
+                    </div>
+                </section>
+            </div>
+
+            <div class="box-5">
+                <section class="nested-box-5">
                     <div class="tech-title">
                         <h2 class="tech-text">Technologies I have worked with</h2>
                     </div>
