add pics for third project

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="box-4">
                 <section class="nested-box-4">
                     <div class="project-img2">
-                        <img src="./imgs/frenmo.png.png" alt="quiz app">
+                        <img src="./imgs/frenmo.png" alt="frenmo app">
                     </div>
                     <div class="project-description">
                         <p><span class="tdsl">Title:</span> Frenmo</p>
@@ -96,8 +96,8 @@
                 </section>
             </div>
 
-            <div class="box-5">
-                <section class="nested-box-5">
+            <div class="box-4">
+                <section class="nested-box-4">
                     <div class="tech-title">
                         <h2 class="tech-text">Technologies I have worked with</h2>
                     </div>
