--- a/project.html
+++ b/project.html
@@ -73,10 +73,10 @@
                     </div>
                 </section>
             </div>
-            <div class="box-4">
-                <section class="nested-box-4">
+            <div class="box-3">
+                <section class="nested-box-3">
                     <div class="project-img2">
-                        <img src="./imgs/frenmo.png.png" alt="quiz app">
+                        <img src="./imgs/frenmo.png" alt="frenmo app">
                     </div>
                     <div class="project-description">
                         <p><span class="tdsl">Title:</span> Frenmo</p>
