changed all titles to h3

--- a/project.html
+++ b/project.html
@@ -39,13 +39,13 @@
                         <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> Bookmark This</p>
-                        <p><span class="tdsl">Description:</span> A bookmark app that allows you to add/delete websites
+                            <h3 class="tdsl">Title:</h3> Bookmark This
+                            <h3 class="tdsl">Description:</h3> A bookmark app that allows you to add/delete websites
                             that
                             you wish to
                             reference.</p>
-                        <p><span class="tdsl">Stack:</span> Html, Css, JQuery and Webpack</p>
-                        <p><span class="tdsl">Links:</span> <span><a
+                            <h3 class="tdsl">Stack:</h3> Html, Css, JQuery and Webpack
+                            <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/thinkful-ei-iguana/javier-bookmarks-app" target="_blank">Github</a></span>
                             <span><a href="https://thinkful-ei-iguana.github.io/javier-bookmarks-app/" target="_blank">Live
                                     App</a></span>
@@ -59,13 +59,11 @@
                         <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
-                        <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge
-                            of
-                            the Harry Potter movies.
-                        </p>
-                        <p><span class="tdsl">Stack:</span> Html, Css, JQuery </p>
-                        <p><span class="tdsl">Links:</span> <span><a
+                            <h3 class="tdsl">Title:</h3> Harry Potter Quiz
+                            <h3 class="tdsl">Description:</h3> A Quiz app of 5 questions, that tests your knowledge
+                            of the Harry Potter movies.
+                            <h3 class="tdsl">Stack:</h3> Html, Css, JQuery
+                            <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app" target="_blank">Github</a></span>
                             <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/" target="_blank">Live
                                     App</a></span>
@@ -79,11 +77,10 @@
                         <img src="./imgs/frenmo.png" alt="frenmo app">
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> Frenmo</p>
-                        <p><span class="tdsl">Description:</span> A venmo like application, that allows the exchange of favors instead of money.
-                        </p>
-                        <p><span class="tdsl">Stack:</span> React, Node.js, Express.js, PostgreSQL </p>
-                        <p><span class="tdsl">Links:</span> <span><a
+                            <h3 class="tdsl">Title:</h3> Frenmo
+                            <h3 class="tdsl">Description:</h3> A venmo like application, that allows the exchange of favors instead of money.
+                            <h3 class="tdsl">Stack:</h3> React, Node.js, Express.js, PostgreSQL
+                            <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/MrNanosh/frienmo-client" target="_blank">Github</a></span>
                             <span><a href="https://https://frenmo.now.sh/" target="_blank">Live
                                     App</a></span>
