--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <img src="./imgs/workout-list.png" alt="workout app">
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> One More</p>
-                        <p><span class="tdsl">Description:</span> A fitness app that allows you to add,save, modify and delete personalized workouts.</p>
-                        <p><span class="tdsl">Stack:</span> React, Node.js, PostgreSQL</p>
-                        <p><span class="tdsl">Links:</span> <span><a
+                        <h3 class="tdsl">Title:</h3> One More
+                        <h3 class="tdsl">Description:</h3> A fitness app that allows you to add,save, modify and delete personalized workouts.
+                        <h3 class="tdsl">Stack:</h3> React, Node.js, PostgreSQL
+                        <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/thinkful-ei-iguana/javi-one-more-client" target="_blank">Github</a></span>
                             <span><a href="https://one-more-app-aiexsay42.now.sh/workoutPage" target="_blank">Live
                                     App</a></span>
@@ -64,12 +64,12 @@
                         <img src="./imgs/quiz.png" alt="quiz app">
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> Harry Potter Quiz</p>
-                        <p><span class="tdsl">Description:</span> A Quiz app of 5 questions, that tests your knowledge
+                        <h3 class="tdsl">Title:</h3> Harry Potter Quiz
+                        <h3 class="tdsl">Description:</h3> A Quiz app of 5 questions, that tests your knowledge
                             of the Harry Potter movies.
-                        </p>
-                        <p><span class="tdsl">Stack:</span> HTML, CSS, JQuery </p>
-                        <p><span class="tdsl">Links:</span> <span><a
+                        
+                        <h3 class="tdsl">Stack:</h3> HTML, CSS, JQuery </p>
+                        <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/thinkful-ei-iguana/Javi_Chistina_quiz_app" target="_blank">Github</a></span>
                             <span><a href="https://thinkful-ei-iguana.github.io/Javi_Chistina_quiz_app/" target="_blank">Live
                                     App</a></span>
@@ -83,11 +83,11 @@
                         <img src="./imgs/frenmo.png" alt="frenmo app">
                     </div>
                     <div class="project-description">
-                        <p><span class="tdsl">Title:</span> Frenmo</p>
-                        <p><span class="tdsl">Description:</span> A venmo like application, that allows the exchange of favors instead of money.
-                        </p>
-                        <p><span class="tdsl">Stack:</span> React, Node.js, Express.js, PostgreSQL </p>
-                        <p><span class="tdsl">Links:</span> <span><a
+                        <h3 class="tdsl">Title:</h3> Frenmo
+                        <h3 class="tdsl">Description:</h3> A venmo like application, that allows the exchange of favors instead of money.
+                        
+                        <h3 class="tdsl">Stack:</h3> React, Node.js, Express.js, PostgreSQL
+                        <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/MrNanosh/frienmo-client" target="_blank">Github</a></span>
                             <span><a href="https://https://frenmo.now.sh/" target="_blank">Live
                                     App</a></span>
