--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <h3 class="tdsl">Stack:</h3> React, Node.js, Express.js, PostgreSQL
                         <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/MrNanosh/frienmo-client" target="_blank">Github</a></span>
-                            <span><a href="https://https://frenmo.now.sh/" target="_blank">Live
+                            <span><a href="https://frenmo.now.sh/" target="_blank">Live
                                     App</a></span>
                         </p>
                     </div>
