fix contact.html errors.

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     <main>
         <section>
             <div class="contact-wrapper">
-                <h2 class="links">Email: <a href="mailto: zapien120@gmail.com">zapien120@gmail</a></h2>
+                <h2 class="links">Email: <a href="mailto:zapien120@gmail.com">zapien120@gmail</a></h2>
                 <h2 class="links">Github: <a href="https://github.com/Javierz299" target="_blank">/Javierz299</a> </h2>
                 <h2 class="links">Linkdin: <a
                         href="https://www.linkedin.com/in/javier-zapien-66bb77188/" target="_blank">Javier Zapien</a></h2>
@@ -41,7 +41,7 @@
 
 
     </main>
-    <footer role="content-info">&copy; 2019</footer>
+    <footer role="footer">&copy; 2019</footer>
 </body>
 
 </html>
