--- a/project.html
+++ b/project.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Projects</title>
+    <link rel="icon" href="favicon.png" >
     <link rel="stylesheet" href="project.css">
 </head>
 
