--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="project-description">
                         <h3 class="tdsl">Title:</h3> One More
-                        <h3 class="tdsl">Description:</h3> A fitness app that allows you to add,save, modify and delete personalized workouts.
+                        <h3 class="tdsl">Description:</h3> A fitness app for the fitness enthusiast. This app allows a user to save their workout routines with easy.
                         <h3 class="tdsl">Stack:</h3> React, Node.js, PostgreSQL
                         <h3 class="tdsl">Links:</h3> <span><a
                                     href="https://github.com/thinkful-ei-iguana/javi-one-more-client" target="_blank">Github</a></span>
@@ -65,8 +65,7 @@
                     </div>
                     <div class="project-description">
                         <h3 class="tdsl">Title:</h3> Harry Potter Quiz
-                        <h3 class="tdsl">Description:</h3> A Quiz app of 5 questions, that tests your knowledge
-                            of the Harry Potter movies.
+                        <h3 class="tdsl">Description:</h3> For the fans of harry potter, a quiz app. Are you a true fan of harry potter. Come test your knowledge.
                         
                         <h3 class="tdsl">Stack:</h3> HTML, CSS, JQuery
                         <h3 class="tdsl">Links:</h3> <span><a
@@ -84,7 +83,7 @@
                     </div>
                     <div class="project-description">
                         <h3 class="tdsl">Title:</h3> Frenmo
-                        <h3 class="tdsl">Description:</h3> A venmo like application, that allows the exchange of favors instead of money.
+                        <h3 class="tdsl">Description:</h3> A venmo like application. Don't have money? well here's an app that allows you to exchange favors instead of currency.
                         
                         <h3 class="tdsl">Stack:</h3> React, Node.js, Express.js, PostgreSQL
                         <h3 class="tdsl">Links:</h3> <span><a
