changed some pics

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="box-2">
                 <section class="nested-box-2">
                     <div class="project-img1">
-                        <img src="./imgs/workout-list.png" alt="workout app">
+                        <img src="./imgs/onemore.png" alt="workout app">
                     </div>
                     <div class="project-description">
                         <h3 class="tdsl">Title:</h3> One More
@@ -113,7 +113,7 @@
                             <img class="img" src="./imgs/nodejs.png" alt="nodejs image">
                         </div>
                         <div class="tech-imgs">
-                            <img class="img" src="./imgs/mongodb.png" alt="mongodb image">
+                            <img class="img" src="./imgs/elephant.png" alt="mongodb image">
                         </div>
                     </div>
                 </section>
