--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
                         <img src="./imgs/frenmo.png" alt="frenmo app">
                     </div>
                     <div class="project-description">
-                            <h3 class="tdsl">Title:</h3> Frenmo - 2020/03
+                            <h3 class="tdsl">Title:</h3> Frenmo
                             <h3 class="tdsl">Description:</h3> A venmo like application, that allows the exchange of favors instead of money.
                             <h3 class="tdsl">Stack:</h3> React, Node.js, Express.js, PostgreSQL
                             <h3 class="tdsl">Links:</h3> <span><a
@@ -57,7 +57,7 @@
                         <img src="./imgs/onemore.png" alt="workout app">
                     </div>
                     <div class="project-description">
-                        <h3 class="tdsl">Title:</h3> One More - 2020/12
+                        <h3 class="tdsl">Title:</h3> One More
                         <h3 class="tdsl">Description:</h3> A fitness app for the fitness enthusiast. This app allows a user to save their workout routines with easy.
                         <h3 class="tdsl">Stack:</h3> React, Node.js, PostgreSQL
                         <h3 class="tdsl">Links:</h3> <span><a
@@ -73,7 +73,7 @@
                         <a href="#"><img src="./imgs/bookmark.png" alt="bookmark app"></a>
                     </div>
                     <div class="project-description">
-                            <h3 class="tdsl">Title:</h3> Bookmark This - 2019/11
+                            <h3 class="tdsl">Title:</h3> Bookmark This
                             <h3 class="tdsl">Description:</h3> A bookmark app that allows you to add/delete websites
                             that you wish to reference.
                             <h3 class="tdsl">Stack:</h3> Html, Css, JQuery and Webpack
@@ -91,7 +91,7 @@
                         <a href="#"><img src="./imgs/quiz.png" alt="quiz app"></a>
                     </div>
                     <div class="project-description">
-                            <h3 class="tdsl">Title:</h3> Harry Potter Quiz - 2019/10
+                            <h3 class="tdsl">Title:</h3> Harry Potter Quiz
                             <h3 class="tdsl">Description:</h3> A Quiz app of 5 questions, that tests your knowledge
                             of the Harry Potter movies.
                             <h3 class="tdsl">Stack:</h3> Html, Css, JQuery
@@ -109,7 +109,7 @@
                         <img src="./imgs/DiceGame.png" alt="dice game">
                     </div>
                     <div class="project-description">
-                            <h3 class="tdsl">Title:</h3> Twenty One - 2019/06
+                            <h3 class="tdsl">Title:</h3> Twenty One
                             <h3 class="tdsl">Description:</h3> A two player dice game, first to 21 wins. If you roll a one turn ends and you lose potential points.
                             <h3 class="tdsl">Stack:</h3> HTML, CSS, JS
                             <h3 class="tdsl">Links:</h3>
@@ -125,7 +125,7 @@
                         <img src="./imgs/huluMock.png" alt="hulu design mock">
                     </div>
                     <div class="project-description">
-                            <h3 class="tdsl">Title:</h3> Hulu Mock Design - 2019/05
+                            <h3 class="tdsl">Title:</h3> Hulu Mock Design
                             <h3 class="tdsl">Description:</h3> A hulu landing page. demnostrating html and css, no JS.
                             <h3 class="tdsl">Stack:</h3> HTML, CSS
                             <h3 class="tdsl">Links:</h3>
@@ -141,7 +141,7 @@
                         <img src="./imgs/netflixMock.png" alt="netflix design mock">
                     </div>
                     <div class="project-description">
-                            <h3 class="tdsl">Title:</h3> Netflix Mock Design - 2019/04
+                            <h3 class="tdsl">Title:</h3> Netflix Mock Design
                             <h3 class="tdsl">Description:</h3> A hulu landing page. demnostrating html and css, no JS.
                             <h3 class="tdsl">Stack:</h3> HTML, CSS
                             <h3 class="tdsl">Links:</h3>
