add two new images to tech stack. and changed img radius to no radius

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                     <div class="list-of-tech">
                         <div class="tech-imgs">
-                            <img class="img" src="./imgs/jquery.png" alt="jquery image">
+                            <img class="img" src="./imgs/JS.png" alt="jquery image">
                         </div>
                         <div class="tech-imgs">
                             <img class="img" src="./imgs/react.png" alt="React image">
@@ -114,6 +114,14 @@
                         </div>
                         <div class="tech-imgs">
                             <img class="img" src="./imgs/elephant.png" alt="mongodb image">
+                        </div>
+                    </div>
+                    <div class="list-of-tech">
+                        <div class="tech-imgs">
+                            <img class="img" src="./imgs/jquery.png" alt="nodejs image">
+                        </div>
+                        <div class="tech-imgs">
+                            <img class="img" src="./imgs/redux.png" alt="mongodb image">
                         </div>
                     </div>
                 </section>
